add branch gh-pages, gitIgnore - add folder build, change package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "diplom-shfe",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/H1Znt/Diploma-shfe.git" ,
   "type": "module",
   "scripts": {
     "dev": "vite",
